--- a/Clase3.ipynb
+++ b/Clase3.ipynb
@@ -64,19 +64,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-0.08950899999999606, 0.06156800000000473, -0.6899999999999997]\n"
+      "[0.06001699999999488, -0.07077600000000572, 0.7300000000000004]\n"
      ]
     }
    ],
    "source": [
-    "a = incresearch(fun,-1,1e-2)\n",
+    "a = incresearch(fun,0,1e-2)\n",
     "print(a)"
    ]
   },
@@ -98,6 +98,42 @@
    ],
    "source": [
     "plot(x,fun(x),'--m',a[2],a[0],\"go\");axhline(y=0,color='r',linestyle='--');grid(True);title('Función nueva');xlabel(\"x\");ylabel(\"y\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def biseccion(g,a,b,epsilon=1e-2):\n",
+    "    while abs(b-a) > epsilon:\n",
+    "        x = (a+b)/2.\n",
+    "        if g(a)*g(x) < 0:\n",
+    "            b = x\n",
+    "        else:\n",
+    "            a = x\n",
+    "    return [x,g(x)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.7367187500000001, -0.027687736988069034]"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "biseccion(fun,-0.1,0.8)"
    ]
   }
  ],
